--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       let room;
 
       async function connectToRoom() {
-        const resp = await fetch(`http://localhost:3000/token`);
+        const resp = await fetch(`https://voice-chat-8ha4.onrender.com/token`);
         const data = await resp.json();
         const token = data.token;
         console.log("Token recibido:", token);
